--- a/homepage.html
+++ b/homepage.html
@@ -167,69 +167,71 @@
     <!-- Research News -->
     <div class="row row--white">
 	    <div class="site-content wrapper clearfix">
-            <div class="news__introduction">
-                <h2>Discover how our research changes the world</h2>
-                <p>Read about the groundbreaking discoveries of our academics and students.</p>
-                <div class="news__desktop__controls owl-nav">
-                    <!-- Populated with Owl Carousel 2 JS -->
-                    <div class="controls__paging"></div>
-                    <div class="controls__nav"></div>
-                </div>
-            </div><!-- end .news__introduction -->
-            <div class="news__carousel__wrapper">
-                <div class="news__carousel">
-                    <div class="owl-carousel2">
-                        <div class="news__item">
-                            <div class="news__image">
-                                <img src="images/news-image-protest.jpg" alt="">
-                            </div>
-                            <div class="news__content">
-                                <h3>Understanding the human cost of austerity and cuts</h3>
-                                <p>Health and social care spending cuts since 2010 are linked to nearly 120,000 excess deaths in England, with the over 60s and care home residents most affected, finds new UCL research.</p>
-                            </div>
-                        </div>
-
-                        <div class="news__item">
-                            <div class="news__image">
-                                <img src="images/news-image-design.jpg" alt="">
-                            </div>
-                            <div class="news__content">
-                                <h3>Understanding the human cost of austerity and cuts</h3>
-                                <p>Health and social care spending cuts since 2010 are linked to nearly 120,000 excess deaths in England, with the over 60s and care home residents most affected, finds new UCL research.</p>
-                            </div>
-                        </div>
-
-                        <div class="news__item">
-                            <div class="news__image">
-                                <img src="images/news-image-health.jpg" alt="">
-                            </div>
-                            <div class="news__content">
-                                <h3>Understanding the human cost of austerity and cuts</h3>
-                                <p>Health and social care spending cuts since 2010 are linked to nearly 120,000 excess deaths in England, with the over 60s and care home residents most affected, finds new UCL research.</p>
-                            </div>
-                        </div>
-
-                        <div class="news__item news__item--most-read">
-                            <div class="news__content">
-                                <h4>Most read</h4>
-                                <ul>
-                                    <li>Using smart detectors to monitor urban bats</li>
-                                    <li>Leading a rethink on stem cells and regenerative medicine</li>
-                                    <li>Understanding the long-term mental health effects of bullying</li>
-                                </ul>
-                                <a href="#">
-                                    See all UCL News <i class="fas fa-angle-right"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div> <!-- end .owl-carousel2 -->
-                
-                    <div class="news__mobile__controls owl-nav">
-                            <!-- Populated with Owl Carousel 2 JS -->
+            <div class="news__block">
+                <div class="news__introduction">
+                    <h2>Discover how our research changes the world</h2>
+                    <p>Read about the groundbreaking discoveries of our academics and students.</p>
+                    <div class="news__desktop__controls owl-nav">
+                        <!-- Populated with Owl Carousel 2 JS -->
                         <div class="controls__paging"></div>
+                        <div class="controls__nav"></div>
                     </div>
-                </div> <!-- end .news__carousel -->
-            </div> <!-- end .news__carousel__wrapper -->
+                </div><!-- end .news__introduction -->
+                <div class="news__carousel__wrapper">
+                    <div class="news__carousel">
+                        <div class="owl-carousel2">
+                            <div class="news__item">
+                                <div class="news__image">
+                                    <img src="images/news-image-protest.jpg" alt="">
+                                </div>
+                                <div class="news__content">
+                                    <h3>Understanding the human cost of austerity and cuts</h3>
+                                    <p>Health and social care spending cuts since 2010 are linked to nearly 120,000 excess deaths in England, with the over 60s and care home residents most affected, finds new UCL research.</p>
+                                </div>
+                            </div>
+
+                            <div class="news__item">
+                                <div class="news__image">
+                                    <img src="images/news-image-design.jpg" alt="">
+                                </div>
+                                <div class="news__content">
+                                    <h3>Understanding the human cost of austerity and cuts</h3>
+                                    <p>Health and social care spending cuts since 2010 are linked to nearly 120,000 excess deaths in England, with the over 60s and care home residents most affected, finds new UCL research.</p>
+                                </div>
+                            </div>
+
+                            <div class="news__item">
+                                <div class="news__image">
+                                    <img src="images/news-image-health.jpg" alt="">
+                                </div>
+                                <div class="news__content">
+                                    <h3>Understanding the human cost of austerity and cuts</h3>
+                                    <p>Health and social care spending cuts since 2010 are linked to nearly 120,000 excess deaths in England, with the over 60s and care home residents most affected, finds new UCL research.</p>
+                                </div>
+                            </div>
+
+                            <div class="news__item news__item--most-read">
+                                <div class="news__content">
+                                    <h4>Most read</h4>
+                                    <ul>
+                                        <li>Using smart detectors to monitor urban bats</li>
+                                        <li>Leading a rethink on stem cells and regenerative medicine</li>
+                                        <li>Understanding the long-term mental health effects of bullying</li>
+                                    </ul>
+                                    <a href="#">
+                                        See all UCL News <i class="fas fa-angle-right"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div> <!-- end .owl-carousel2 -->
+                    
+                        <div class="news__mobile__controls owl-nav">
+                                <!-- Populated with Owl Carousel 2 JS -->
+                            <div class="controls__paging"></div>
+                        </div>
+                    </div> <!-- end .news__carousel -->
+                </div> <!-- end .news__carousel__wrapper -->
+            </div><!-- end .news__block -->
         </div> <!-- end .site-content -->
     </div> <!-- end .row.row--white -->
 
@@ -240,14 +242,21 @@
                 <h2>Study at UCL</h2>
                 <div class="owl-carousel2">
                     <div class="study__item">
-                        <a class="owl-video" href="https://www.youtube.com/watch?v=mp133liHzBo"></a>
                         <div class="study__image">
+                            <a class="owl-video" href="https://www.youtube.com/watch?v=mp133liHzBo"></a>
                             <img src="images/hero-vid-1.jpg" alt="">
                         </div>
                         <div class="study__content">
-                            <h3>"I tested new methods for teaching children to read"</h3>
-                            <p class="author">Pauline Washington</p>
-                            <p class="desc">2nd year, BA Education Studies</p>
+                            <h3>Title goes here</h3>
+                            <figure>
+                                <blockquote>
+                                     <p>"I tested new methods for teaching children to read"</p>
+                                </blockquote>
+                                <figcaption>
+                                    <p class="author">Pauline Washington</p>
+                                    <p class="desc">2nd year, BA Education Studies</p>
+                                </figcaption>
+                            </figure>
                         </div>
                     </div>
 
@@ -257,9 +266,16 @@
                             <img src="images/hero-vid-2.jpg" alt="">
                         </div>
                         <div class="study__content">
-                            <h3>"I mapped 250 stars that could support life"</h3>
-                            <p class="author">Wendy Leung</p>
-                            <p class="desc">4th year, PhD Astrophysicds</p>
+                            <h3>Title goes here</h3>
+                            <figure>
+                                <blockquote>
+                                    <p>"I mapped 250 stars that could support life"</p>
+                                </blockquote>
+                                <figcaption>
+                                    <p class="author">Wendy Leung</p>
+                                    <p class="desc">4th year, PhD Astrophysicds</p>
+                                </figcaption>
+                            </figure>
                         </div>
                     </div>
                     <div class="study__item">
@@ -268,9 +284,16 @@
                             <img src="images/hero-vid-1.jpg" alt="">
                         </div>
                         <div class="study__content">
-                            <h3>"I tested new methods for teaching children to read"</h3>
-                            <p class="author">Pauline Washington</p>
-                            <p class="desc">2nd year, BA Education Studies</p>
+                            <h3>Title goes here</h3>
+                            <figure>
+                                <blockquote>
+                                    <p>"I mapped 250 stars that could support life"</p>
+                                </blockquote>
+                                <figcaption>
+                                    <p class="author">Wendy Leung</p>
+                                    <p class="desc">4th year, PhD Astrophysicds</p>
+                                </figcaption>
+                            </figure>
                         </div>
                     </div>
                     <div class="study__item">
@@ -279,9 +302,16 @@
                             <img src="images/hero-vid-2.jpg" alt="">
                         </div>
                         <div class="study__content">
-                            <h3>"I mapped 250 stars that could support life"</h3>
-                            <p class="author">Wendy Leung</p>
-                            <p class="desc">4th year, PhD Astrophysicds</p>
+                            <h3>Title goes here</h3>
+                            <figure>
+                                <blockquote>
+                                    <p>"I mapped 250 stars that could support life"</p>
+                                </blockquote>
+                                <figcaption>
+                                    <p class="author">Wendy Leung</p>
+                                    <p class="desc">4th year, PhD Astrophysicds</p>
+                                </figcaption>
+                            </figure>
                         </div>
                     </div>
                 </div> <!-- end .owl-carousel2 -->
@@ -760,11 +790,11 @@
                             </p>
                             <div class="twitter__details">
                                 <div class="twitter-icon">
-                                    <img src="images/twitter-ucl-news-logo.jpg" alt="">
+                                    <img src="images/twitter-ucl-logo.jpg" alt="">
                                 </div>
                                 <div class="twitter__info">
-                                    <p class="twitter-username">UCL News</p>
-                                    <p class="twitter-handle">@uclnews</p>
+                                    <p class="twitter-username">UCL</p>
+                                    <p class="twitter-handle">@ucl</p>
                                 </div>
                             </div>
                             <a href="#">Follow <i class="fas fa-angle-right"></i></a>
@@ -932,7 +962,7 @@
                 </div>
 
                 <div class="block block--col-2">
-                    <h2 class="as-h5">Follow [Department / Faculty / UCL Culture…]</h2>
+                    <!-- <h2 class="as-h5">Follow [Department / Faculty / UCL Culture…]</h2>
                     <ul class="social__list social__list--dept list-unstyled">
                         <li class="social__item">
                             <a href="https://twitter.com/ucl">
@@ -969,7 +999,7 @@
                                 <i class="fab fa-medium fa-lg"></i>
                             </a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
             <div class="footer__links clearfix">
