Homepage styling updates

--- a/homepage.html
+++ b/homepage.html
@@ -864,7 +864,7 @@
                         items: 2,
                         nav: true,
                         stagePadding: 50,
-                        slideBy: 2,
+                        dotsEach: true,
                         navContainer: '.news__desktop__controls .controls__nav',
                         dotsContainer: '.news__desktop__controls .controls__paging',
                     }
